%% Quedó precioso, ya sé
classDiagram
   accTitle: Diagrama de Clases Proyecto Final

   class Game {
     +Pokemon: List~IPokemon~
     +Player1: Player
     +Player2: Player

     +createGame() Game
     -AttackPlayer(Player active, Player other) void
     -PlayTurn(Player active, Player other) void
     -PlayTurnP1() void
     -PlayTurnP2() void
     -ChangePokemon(Player p) void
     -CheckDead(Player p) bool
     +Play() void
   }
   Game "0..*" <.. "1" IPokemon
   Game "2" <.. "1" Player

   <<interface>> IPokemon
   class IPokemon {
     +Name: string
     +Element: IElement
     +Attacks: Attack[]
     +Health: int
     +MaxHealth: int

     +Attack(IPokemon target, string attackName) bool
   }
   IPokemon "1" *-- "0..*" Element
   IPokemon "1..4" *-- "0..*" Attack
   <<enumeration>> Element
   class Element {
     Fire
     Water
     Grass
     Electric

     +Advantage(Element other) double
   }

   class Attack {
     +Name: string
     +Damage: int
     +Type: Element
   }
   Attack "1" *-- "0..*" Element

   class Player {
     +Name: string
     +Pokemon: List~IPokemon~
     +ActivePokemon: int

     +ChangePokemon(string newPokemon) bool
     +Attack(Player other, string attackName) bool
     +IsDead() bool
   }
   Player "6" *-- "0..*" IPokemon

   class Charmander {
     +Name: string
     +Element: IElement
     +Attacks: Attack[]
     +Health: int
     +MaxHealth: int
   }
   Charmander <|-- IPokemon

   class Pikachu {
     +Name: string
     +Element: IElement
     +Attacks: Attack[]
     +Health: int
     +MaxHealth: int
   }
   Pikachu <|-- IPokemon

   class Bulbasaur {
     +Name: string
     +Element: IElement
     +Attacks: Attack[]
     +Health: int
     +MaxHealth: int
   }
   Bulbasaur <|-- IPokemon

   class Squirtle {
     +Name: string
     +Element: IElement
     +Attacks: Attack[]
     +Health: int
     +MaxHealth: int
   }
   Squirtle <|-- IPokemon
